# agent-rl

./: .gitignore  README.md  README_GRPO.md  accelerate_redteam_grpo_trainer.py  bank_env.py  base_eval.py  base_testing.py  interactive.sh  online_run.sh  pyproject.toml  qwen_llm.py  redteaming.py  redteaming.sh  refusal_eval.py  requirements.txt  run_redteam_grpo.py  sample_redteam_grpo_config.yaml  single_eval.sh  slurm-629004.out  testing.py  train_grpo.py  train_grpo.sh  trajectories.md  viz.py
qwen/: payload.json  run_payload_vllm.sh  serve_vllm.sh
results/api_bank/zero-shot/: results.jsonl
results/bank/: manual_redteaming.txt
results/bank/zero_shot/: results.jsonl
results/slack/: manual_redteaming.txt
results/slack/few-shot/: results.jsonl
results/slack/zero-shot/: results.jsonl
results/travel/: manual_redteaming.txt
results/workspace/: manual_redteaming.txt
results/workspace/few-shot/: results.jsonl
results/workspace/zero_shot/: results.jsonl
sft/: dataset_gen.py
suites/: api_bank_suite.py  bank_suite.py  slack_suite.py  suite.py  travel_suite.py  workspace_suite.py
utils/: self_bleu.py
