[project]
name = "agent-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentdojo>=0.1.22",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "setuptools>=75.6.0",
    "vllm>=0.6.4.post1",
]
